update meta tags for SEO and social preview

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,22 +1,25 @@
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/victoria-og.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Victoria Solomtin | ויקטוריה סולומטין | Portfolio</title>
-    
-    <meta name="description" content="Victoria Solomtin (ויקטוריה סולומטין) – Full Stack Developer. Portfolio of projects, CV, and contact info." />
-    <meta name="keywords" content="Victoria Solomtin, ויקטוריה סולומטין, Full Stack Developer, React, Node.js, MongoDB, Portfolio, קורות חיים, פורטפוליו" />
-
+    <title>Victoria Solomtin | Portfolio</title>
+    <meta name="description" content="Victoria Solomtin – Full Stack Developer. Portfolio, projects and contact info." />
+    <!-- Open Graph / WhatsApp / Facebook -->
     <meta property="og:title" content="Victoria Solomtin | Portfolio" />
-    <meta property="og:description" content="Portfolio of Victoria Solomtin (ויקטוריה סולומטין) – Full Stack Developer. React, Node.js, MongoDB. Projects, CV and contact info." />
-    <meta property="og:image" content="https://portfolio-5qny.onrender.com/victoria-og.jpg" />
+    <meta property="og:description" content="Portfolio of Victoria Solomtin – Full Stack Developer." />
+    <meta property="og:image" content="/victoria-og.jpg" />
     <meta property="og:url" content="https://portfolio-5qny.onrender.com" />
     <meta property="og:type" content="website" />
-
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Victoria Solomtin | Portfolio" />
-    <meta name="twitter:description" content="Portfolio of Victoria Solomtin (ויקטוריה סולומטין) – Full Stack Developer. React, Node.js, MongoDB. Projects, CV and contact info." />
-    <meta name="twitter:image" content="https://portfolio-5qny.onrender.com/victoria-og.jpg" />
+    <meta name="twitter:description" content="Portfolio of Victoria Solomtin – Full Stack Developer." />
+    <meta name="twitter:image" content="/victoria-og.jpg" />
   </head>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
