--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,25 +1,46 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/victoria-og.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Victoria Solomtin | Portfolio</title>
-    <meta name="description" content="Victoria Solomtin – Full Stack Developer. Portfolio, projects and contact info." />
-    <!-- Open Graph / WhatsApp / Facebook -->
-    <meta property="og:title" content="Victoria Solomtin | Portfolio" />
-    <meta property="og:description" content="Portfolio of Victoria Solomtin – Full Stack Developer." />
-    <meta property="og:image" content="/victoria-og.jpg" />
-    <meta property="og:url" content="https://portfolio-5qny.onrender.com" />
-    <meta property="og:type" content="website" />
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Victoria Solomtin | Portfolio" />
-    <meta name="twitter:description" content="Portfolio of Victoria Solomtin – Full Stack Developer." />
-    <meta name="twitter:image" content="/victoria-og.jpg" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/jpeg" href="/victoria-og.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title + Description ממוקדי שם -->
+  <title>Victoria Solomtin (Solomatin) – Portfolio & Backend Developer</title>
+  <meta name="description" content="Official portfolio of Victoria Solomtin (also known as Victoria Solomatin) – Backend / Full-Stack Developer. Projects, skills, and contact info." />
+
+  <!-- Robots + Canonical -->
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://portfolio-5qny.onrender.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Victoria Solomtin (Solomatin) | Portfolio" />
+  <meta property="og:description" content="Portfolio of Victoria Solomtin (aka Solomatin) – Backend / Full-Stack Developer." />
+  <meta property="og:image" content="/victoria-og.jpg" />
+  <meta property="og:url" content="https://portfolio-5qny.onrender.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Victoria Solomtin (Solomatin) | Portfolio" />
+  <meta name="twitter:description" content="Portfolio of Victoria Solomtin – Backend / Full-Stack Developer." />
+  <meta name="twitter:image" content="/victoria-og.jpg" />
+
+  <!-- Structured Data (Google) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Victoria Solomtin | Portfolio",
+    "url": "https://portfolio-5qny.onrender.com/",
+    "author": {
+      "@type": "Person",
+      "name": "Victoria Solomtin",
+      "alternateName": ["Victoria Solomatin", "Solomtin", "Solomatin"],
+      "jobTitle": "Backend / Full-Stack Developer",
+      "sameAs": [
+        "https://www.linkedin.com/in/victoria-solomatin",
+        "https://github.com/victorias22"
+      ]
+    }
+  }
+  </script>
+</head>
