--- a/my-app/index.html
+++ b/my-app/index.html
@@ -3,7 +3,6 @@
   <link rel="icon" type="image/jpeg" href="/victoria-og.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Title + Description ממוקדי שם -->
   <title>Victoria Solomtin (Solomatin) – Portfolio & Backend Developer</title>
   <meta name="description" content="Official portfolio of Victoria Solomtin (also known as Victoria Solomatin) – Backend / Full-Stack Developer. Projects, skills, and contact info." />
 
@@ -14,7 +13,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Victoria Solomtin (Solomatin) | Portfolio" />
   <meta property="og:description" content="Portfolio of Victoria Solomtin (aka Solomatin) – Backend / Full-Stack Developer." />
-  <meta property="og:image" content="/victoria-og.jpg" />
+  <meta property="og:image" content="https://portfolio-5qny.onrender.com/victoria-og.jpg" />
   <meta property="og:url" content="https://portfolio-5qny.onrender.com/" />
   <meta property="og:type" content="website" />
 
@@ -22,9 +21,9 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Victoria Solomtin (Solomatin) | Portfolio" />
   <meta name="twitter:description" content="Portfolio of Victoria Solomtin – Backend / Full-Stack Developer." />
-  <meta name="twitter:image" content="/victoria-og.jpg" />
+  <meta name="twitter:image" content="https://portfolio-5qny.onrender.com/victoria-og.jpg" />
 
-  <!-- Structured Data (Google) -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
