feat: save beginning_score on signup and google signup

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My App</title>
+    <title>Victoria Solomatin | Portfolio</title>
+    <meta name="description" content="Victoria Solomatin - Backend Developer specializing in Python, Node.js and scalable systems. Portfolio and projects." />
   </head>
   <body>
     <div id="root"></div>
