feat: save beginning_score on signup and google signup

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,11 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Victoria Solomatin | Portfolio</title>
-    <meta name="description" content="Victoria Solomatin - Backend Developer specializing in Python, Node.js and scalable systems. Portfolio and projects." />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Victoria Solomatin | Portfolio</title>
+  <meta name="description" content="Victoria Solomatin - Backend Developer specializing in Python, Node.js and scalable systems. Portfolio and projects." />
+
+  <!-- Schema Markup for Google / SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Victoria Solomatin",
+    "alternateName": "ויקטוריה סולומטין",
+    "image": "https://yourdomain.com/victoria.jpg",
+    "jobTitle": "Backend Developer",
+    "url": "https://portfolio-5qny.onrender.com",
+    "sameAs": [
+      "https://www.linkedin.com/in/victoria-solomatin",
+      "https://github.com/victorias22"
+    ],
+    "description": "Victoria Solomatin - Backend Developer specializing in Python, Node.js and scalable systems. Portfolio and projects."
+  }
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
